[package]
name = "clap-documentation"
version = "0.1.0"
authors = [
  "Connor Gray <code@connorgray.com>",
  "José Guilherme Vanz <jguilhermevanz@suse.com",
]
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/jvanz/clap-documentation"
description = "Autogenerate Markdown or Asciidoc documentation for clap command-line tools"
keywords = ["clap", "markdown", "command-line", "help", "asciidoc"]
categories = [
  "command-line-interface",
  "command-line-utilities",
  "development-tools",
  "accessibility",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.*.*"

[dev-dependencies]
clap = { version = "4.4.0", features = ["derive"] }

pretty_assertions = "1.3.0"
